tests/baselines/reference/classImplementsClass7.errors.txt
tests/cases/compiler/classImplementsClass7.ts(5,7): error TS2720: Class 'B' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
  Index signature is missing in type 'A'.


==== tests/cases/compiler/classImplementsClass7.ts (1 errors) ====
    class A {
        private x: number;
    }
    
    class B implements A {}
          ~
!!! error TS2720: Class 'B' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
!!! error TS2720:   Index signature is missing in type 'A'.
    